refactor: step-1 피드백 반영
- 지역변수 -> 인스턴스 변수
- Signature Exception 통일
- Java 11 버전 코드로 변경
- assertAll 적용